# YERM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  yerm_android.cpp
YERM_App/: GenericUpdate.cpp  GenericUpdate.h  Update.cpp  Update.h
YERM_PC/: logger.hpp  main.cpp  yr_2d.cpp  yr_2d.h  yr_align.hpp  yr_audio.cpp  yr_audio.h  yr_basic.hpp  yr_bits.hpp  yr_compiler_specific.hpp  yr_constants.cpp  yr_constants.hpp  yr_d3d11.cpp  yr_d3d11.h  yr_d3d12.cpp  yr_d3d12.h  yr_game.cpp  yr_game.h  yr_gameapp.h  yr_graphics.h  yr_graphics_param.h  yr_input.cpp  yr_input.h  yr_math.hpp  yr_model.cpp  yr_model.h  yr_opengl.cpp  yr_opengl.h  yr_opengles.cpp  yr_opengles.h  yr_pool.hpp  yr_scene.cpp  yr_scene.h  yr_shadercompile.hpp  yr_simd.hpp  yr_singleheader.cpp  yr_string.hpp  yr_sys.cpp  yr_sys.h  yr_threadpool.hpp  (+6 more)
YERM_android/: gradle.properties  settings.gradle
YERM_android/app/: build.gradle
YERM_android/app/src/androidTest/java/onart/pack/yerm_android/: ExampleInstrumentedTest.java
YERM_android/app/src/main/: AndroidManifest.xml
YERM_android/app/src/main/cpp/: CMakeLists.txt  yerm_android.cpp
YERM_android/app/src/main/java/onart/pack/yerm_android/: MainActivity.java
YERM_android/app/src/main/res/values/: strings.xml  themes.xml
YERM_android/app/src/main/res/values-night/: themes.xml
YERM_android/app/src/test/java/onart/pack/yerm_android/: ExampleUnitTest.java
YERM_android/gradle/wrapper/: gradle-wrapper.properties
YERM_web/: hello_triangle_minimal.c  wmain.cpp  yr_webgl.cpp  yr_webgl.h  yr_webgpu.h
YERM_webgpu/: wmain.cpp  yr_webgpu.cpp  yr_webgpu.h
shaders/: scalepx.frag  test.frag  test.vert  testia.frag  testia.vert  testshader.txt  testtx.frag  testtx.vert
test_resources/: textures.txt
tools/: CMakeLists.txt  yrt_ktx.cpp  yrt_xxd.cpp
